[project]
name = "chainlit-rag-chatbot"
version = "0.1.0"
description = "starter skeleton for rag chatbot using chainlit"
authors = [
    {name = "joel tang",email = "tang.j.joel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0.0"
dependencies = [
    "chainlit (>=2.1.2,<3.0.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "openai (>=1.61.1,<2.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "tiktoken (>=0.8.0,<0.9.0)",
    "pymupdf (>=1.25.2,<2.0.0)",
    "pysqlite3-binary (>=0.5.4,<0.6.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "langchain-postgres (>=0.0.13,<0.0.14)",
    "load-dotenv (>=0.1.0,<0.2.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg-binary (>=3.2.4,<4.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
